podman test focal fix 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 before_install:
   - sudo podman pull docker.io/nginx:latest
   - sudo podman run --privileged -d nginx
+  - podman ps -a
 
 script:
   - echo "test"
