--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - podman
 
 before_install:
-- sudo podman pull quay.io/example/webapp
-- sudo podman run --privileged -d -p 127.0.0.1:80:8080 quay.io/example/example /bin/sh -c "cd /app; ./start.sh;"
+- sudo podman pull docker.io/nginx:latest
+- sudo podman run --privileged -d -p 127.0.0.1:80:8080 docker.io/nginx:latest /bin/sh -c "cd /app; ./start.sh;"
 - podman ps -a
-- podman run quay.io/example/example /bin/sh -c "cd /app; ./run_tests.sh"
+- podman run docker.io/nginx:latest /bin/sh -c "cd /app; ./run_tests.sh"
 
 script:
   - echo "test"
