--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 - sudo podman pull docker.io/nginx:latest
 - sudo podman run --privileged -d -p 127.0.0.1:80:8080 docker.io/nginx:latest /bin/sh -c "cd /app; ./start.sh;"
 - podman ps -a
-- podman run docker.io/nginx:latest /bin/sh -c "cd /app; ./run_tests.sh"
+- podman run --rm docker.io/nginx:latest /bin/sh -c "nginx -v"
 
 script:
   - echo "test"
