--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ services:
   - podman
 
 before_install:
-- sudo podman pull docker.io/nginx:latest
-- sudo podman run --privileged -d -p 127.0.0.1:80:8080 docker.io/nginx:latest /bin/sh -c "cd /app; ./start.sh;"
-- podman ps -a
-- podman run --rm docker.io/nginx:latest /bin/sh -c "nginx -v"
-
+  - podman pull docker.io/nginx:latest
+  - podman run --privileged -d -p 127.0.0.1:80:80 docker.io/nginx:latest
+  - podman ps -a
+  - curl http://127.0.0.1:80 -I
 script:
   - echo "test"
