--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ services:
   - podman
 
 before_install:
-  - podman pull docker.io/nginx:latest
-  - podman run --privileged -d -p 127.0.0.1:80:80 docker.io/nginx:latest
-  - podman ps -a
-  - curl http://127.0.0.1:80 -I
+- sudo podman pull docker.io/nginx:latest
+- sudo podman run --privileged -d -p 127.0.0.1:80:8080 docker.io/nginx:latest
+- podman ps -a
+- podman run --rm docker.io/nginx:latest /bin/sh -c "nginx -v"
+
 script:
   - echo "test"
