--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 os: linux
-dist: bionic
+dist: noble
 group: dev
 
 service:
@@ -11,6 +11,13 @@ jobs:
 
 before_install:
   - sudo apt-get update
+
+install:
+  - sudo sysctl -w kernel.unprivileged_userns_clone=1
+  - sudo usermod --add-subuids 100000-165535 $(whoami)
+  - sudo usermod --add-subgids 100000-165535 $(whoami)
+  - sudo apt-get install -y uidmap slirp4netns fuse-overlayfs
+  - sudo systemctl restart systemd-cgroupv2
 
 script:
   - podman --version
