--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
   - mkdir -p ~/.config/containers/
   - echo -e "[storage]\ndriver = \"vfs\"" > ~/.config/containers/storage.conf
   - cat ~/.config/containers/storage.conf
-  - podman info
-  - podman run --rm hello-world
+  - sudo podman info
+  - sudo podman run --rm hello-world
