--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,53 @@
-os: linux
-dist: noble
-group: dev
+language: minimal
 
-service:
-  - podman
-jobs:
-  include:
-    - name: "Check Podman Version on Ubuntu Bionic"
+dist: jammy
+virt: lxd
+
+arch:
+  - amd64
+
+env:
+  global:
+    - LXD_IMAGE=ubuntu:22.04
+    - CONTAINER_NAME=jammy-test-container
 
 before_install:
-  - sudo apt-get update
+  - sudo lxd init --auto
+  - sudo lxc network list | grep -q lxdbr0 || sudo lxc network create lxdbr0
+  - sudo lxc profile show default | grep -q 'lxdbr0' || sudo lxc network attach-profile lxdbr0 default eth0
+  - sudo lxc image list | grep -q ${LXD_IMAGE} || sudo lxc image copy ubuntu:22.04 local: --alias=${LXD_IMAGE}
+
+install:
+  - echo "Przygotowanie środowiska zakończone"
 
 script:
-  - podman --version
-  - podman info
-  - podman run --rm hello-world
+  - echo "Uruchamiam kontener LXD..."
+  - sudo lxc launch ${LXD_IMAGE} ${CONTAINER_NAME}
+  - for i in {1..10}; do sudo lxc info ${CONTAINER_NAME} | grep -q 'Status: Running' && break || sleep 1; done
+
+  # Sprawdzanie wersji i instalacja narzędzi
+  - sudo lxc exec ${CONTAINER_NAME} -- lsb_release -a
+  - sudo lxc exec ${CONTAINER_NAME} -- apt update
+  - sudo lxc exec ${CONTAINER_NAME} -- apt install -y curl wget git build-essential python3 stress-ng
+
+  # Test działania aplikacji i środowiska
+  - sudo lxc exec ${CONTAINER_NAME} -- bash -c "echo -e '#!/usr/bin/env python3\nprint(\"Hello from Ubuntu Jammy LXD container!\")' > /root/test_app.py"
+  - sudo lxc exec ${CONTAINER_NAME} -- chmod +x /root/test_app.py
+  - sudo lxc exec ${CONTAINER_NAME} -- python3 /root/test_app.py
+
+  # Test połączenia sieciowego i prosty test wydajności
+  - sudo lxc exec ${CONTAINER_NAME} -- ping -c 3 8.8.8.8
+  - sudo lxc exec ${CONTAINER_NAME} -- curl -s https://ifconfig.me
+  - sudo lxc exec ${CONTAINER_NAME} -- stress-ng --cpu 1 --timeout 5s --metrics-brief
+
+after_script:
+  - sudo lxc stop ${CONTAINER_NAME} || true
+  - sudo lxc delete ${CONTAINER_NAME} || true
+  - sudo lxc image delete ${LXD_IMAGE} || true
+
+notifications:
+  email:
+    recipients:
+      - admin@example.com
+    on_success: change
+    on_failure: always
