--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-language: minimal
-
-dist: jammy
-  arch: ppc64le
+arch: ppc64le         # The IBM Power LXD container based build for OSS only
+os: linux             # required for arch different than amd64
+dist: noble           # or jammy | focal | bionic | xenial | trusty | precise with xenial as default
 
 env:
   global:
