--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 arch: ppc64le         # The IBM Power LXD container based build for OSS only
 os: linux             # required for arch different than amd64
-dist: noble           # or jammy | focal | bionic | xenial | trusty | precise with xenial as default
+dist: jammy         # or jammy | focal | bionic | xenial | trusty | precise with xenial as default
 
 script:
   - echo "== SYSTEM INFO =="
