--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,9 @@
-language: python
-python: 3.12
-services:
-  - mysql
-  - rabbitmq
-  - postgresql
-  - docker
 
-script:
-  - python --version
-  - python3 --version
-  - echo "Docker version:"
-  - docker version
-  - echo "Docker Compose version:"
-  - docker compose version
-  - echo "Docker Buildx version:"
-  - docker buildx version
-  - echo "Git version:"
-  - git -v
-  - echo "Google Chrome version:"
-  - google-chrome --version || true
-  - echo "MongoDB version:"
-  - mongod --version || true
-  - echo "Elasticsearch version:"
-  - curl -s localhost:9200 || true
-  - echo "Kernel version:"
-  - uname -r
-  
+os: linux
+dist: jammy
+arch: arm64
+language: shell
 
-  - echo "=== Podman tests ==="
-  - command -v podman && podman --version || echo "Podman not installed"
-  - podman info --format "{{.Version.Version}}" || echo "Podman info not available"
-  - podman system info || echo "Podman system info not available"
-
-  - echo "=== Android SDK tests ==="
-  - echo "Android SDK location:"
-  - echo $ANDROID_HOME
-  - if [ -d "$ANDROID_HOME" ]; then ls -la $ANDROID_HOME; else echo "Android SDK not found at ANDROID_HOME"; fi
-  - if [ -f "$ANDROID_HOME/tools/bin/sdkmanager" ]; then $ANDROID_HOME/tools/bin/sdkmanager --list | head -20; else echo "sdkmanager not found"; fi
-  - if [ -d "$ANDROID_HOME/platform-tools" ]; then $ANDROID_HOME/platform-tools/adb --version; else echo "adb not found"; fi
-  - command -v sdkmanager && sdkmanager --version || echo "sdkmanager not in PATH"
-  - command -v adb && adb --version || echo "adb not in PATH"
-  
-  - echo "Timezone info:"
-  - timedatectl || true
-  - echo "System packages report:"
-  - echo "witam"
-
-jobs:
-  include:
-  - dist: bionic
-    group: dev
-  - dist: focal
-    group: dev
-  - dist: jammy
-    group: dev
-  - dist: noble
-    group: dev
+install: skip
+script: 
+  -echo "test"
