--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 os: linux
 arch: ppc64le
 dist: jammy
-
+language: generic
 
 script:
-  - echo "Hello from ppc64le on Ubuntu Jammy"
+  - echo "Sprawdzam architekturę systemu:"
+  - uname -m
+  - if [ "$(uname -m)" != "ppc64le" ]; then echo "Błąd: architektura nie jest ppc64le!"; exit 1; fi
+  - echo "Architektura poprawna – kontynuuję build."
