--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 os: linux
 arch: ppc64le
 dist: jammy
-language: generic
 
 script:
   - echo "Sprawdzam architekturę systemu:"
   - uname -m
+  - if [ "$(uname -m)" != "ppc64le" ]; then echo "Błąd: architektura nie jest ppc64le!"; exit 1; fi
+  - echo "Architektura poprawna – kontynuuję build."
