--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 os: windows
+language: shell
 
 before_install:
-  - choco install golang --version=1.20.0
-  - export GOROOT="/c/Go"
-  - export PATH="$GOROOT/bin:$PATH"
+  - choco install golang --version=1.20.0 -y
+  - export GOROOT="C:\\Go"
+  - export PATH="$GOROOT\\bin:$PATH"
+
 script:
   - go version
   - go build
