--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - go version
 
   - echo ">>> Budowanie projektu (go build -v):"
-  - go build -v -o app.exe main.go 2>&1 || (
+  - sudo go build -v -o app.exe main.go 2>&1 || (
       echo "❌ Błąd kompilacji!" &&
       echo ">>> Zawartość main.go:" &&
       cat main.go &&
