--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,9 @@
 os: windows
-language: shell
+language: go
 
-before_install:
-  - choco install golang --version=1.20.0 -y
-  - export GOROOT="C:\\Program Files\\Go"
-  - export PATH="/c/Program Files/Go/bin:$PATH"
+go:
+- "1.20" # or any Go version you prefer
 
 script:
-  - echo ">>> Ścieżka do Go:"
-  - which go
-  - echo ">>> Wersja Go:"
-  - go version
-
-  - echo ">>> Budowanie projektu (go build -v):"
-  - go build -v -o app.exe main.go 2>&1 || (
-      echo "❌ Błąd kompilacji!" &&
-      echo ">>> Zawartość main.go:" &&
-      cat main.go &&
-      exit 1
-    )
-
-  - echo ">>> Pliki po buildzie:"
-  - ls -la
-
-  - echo ">>> Uruchamianie aplikacji:"
-  - ./app.exe
-
-  - echo ">>> Testy jednostkowe:"
-  - go test -v ./...
+- go version
+- go build -v ./...
