--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-os: windows
-language: go
+language: node_js
+node_js:
+  - 20.9             # latest LTS version ('node' will give latest version, 'lts/*' will give LTS version )
+arch: amd64           # optional, this is default, routes to a full VM
+# arch: arm64         # this is the recommended LXD container - faster spin up but some limitations Not used as it seems very unstable.
+os: linux             # optional, this is default
+dist: jammy    
 
-go:
-- "1.20" # or any Go version you prefer
+
+
+before_install:
+  - npm install 
 
 script:
-- go version
-- go build -v ./...
+  - echo "test" 
