--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
-language: node_js
-node_js:
-  - 20.9             # latest LTS version ('node' will give latest version, 'lts/*' will give LTS version )
-arch: amd64           # optional, this is default, routes to a full VM
-# arch: arm64         # this is the recommended LXD container - faster spin up but some limitations Not used as it seems very unstable.
-os: linux             # optional, this is default
-dist: jammy    
+os: windows
+language: go
 
-before_install:
-  - npm install
+go:
+- "1.20" # or any Go version you prefer
 
 script:
-  - echo "test"
+- go version
+- go build -v ./...
