--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: go
 go:
   - "1.20" # or any Go version you prefer
 script:
+  - go version
+  - go build -v ./...
+  - go run tools/check_windows.go
   - uname -a
   - echo $OSTYPE
   - test -d "/c/Windows" && echo "Windows directory exists"
   - test -d "/c/Program Files" && echo "Program Files directory exists"
   - grep -q "Microsoft\|MINGW\|MSYS" /proc/version && echo "Running on Windows environment"
   - cat /proc/version
-  - echo "System drive: $SYSTEMDRIVE"
-  - echo "Windows directory: $WINDIR"
+  - echo "System drive $SYSTEMDRIVE"
+  - echo "Windows directory $WINDIR"
