travis_setup_go fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
-os: windows
+os: linux
 language: go
+
 go:
-  - "1.20" # or any Go version you prefer
+- "1.20" # or any Go version you prefer
+
 script:
-  - uname -a
-  - echo $OSTYPE
-  - test -d "/c/Windows" && echo "Windows directory exists"
-  - test -d "/c/Program Files" && echo "Program Files directory exists"
-  - grep -q "Microsoft\|MINGW\|MSYS" /proc/version && echo "Running on Windows environment"
-  - cat /proc/version
-  - echo "System drive $SYSTEMDRIVE"
-  - echo "Windows directory $WINDIR"
-  - go version
-  - go build -v ./...
-  - go run tools/check_windows.go
+- go version
+- go build -v ./...
