--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,9 @@
+os: windows
 language: go
 
-jobs:
-  include:
-    - name: "Ubuntu Bionic (18.04)"
-      dist: bionic
-    
-    - name: "Ubuntu Focal (20.04)"
-      dist: focal
-    
-    - name: "Ubuntu Jammy (22.04)"
-      dist: jammy
-    
-    - name: "Ubuntu Noble (24.04)"
-      dist: noble
-env:
-  global:
-    - GO111MODULE=on
-
-cache:
-  directories:
-    - $HOME/.cache/go-build
-    - $HOME/gopath/pkg/mod
+go:
+- "1.20" # or any Go version you prefer
 
 script:
-  - go version
-  - go build -v ./...
-
+- go version
+- go build -v ./...
