--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,50 @@ before_install:
 script:
   - echo "npm install completed successfully"
   # dalej np. npm test lub ./node_modules/.bin/hugo
+alanguage: node_js
+node_js:
+  - 20.9             # LTS version
+os: linux
+arch: amd64
+dist: jammy        # Ubuntu 22.04
+
+# Disable npm progress bars to reduce log noise
+env:
+  - NPM_CONFIG_PROGRESS=false
+
+# Cache npm to speed up builds
+cache:
+  directories:
+    - ~/.npm
+
+# Shallow clone speeds up git operations
+git:
+  depth: 1
+  quiet: true
+  submodules: false
+
+before_install:
+  # Comprehensive diagnostics to compare environments
+  - |
+    echo "--- System Diagnostics ---"
+    echo "Kernel & Hardware:"; uname -a
+    echo "OS Release:"; lsb_release -a 2>/dev/null || true
+    echo "Ulimits:"; ulimit -a
+    echo "Memory Usage:"; free -h
+    echo "Disk Usage:"; df -h
+    echo "DNS Config:"; cat /etc/resolv.conf
+    echo "Environment Variables:"; env
+    echo "npm Config:"; npm config list
+
+    echo "--- Network & GitHub Tests ---"
+    echo "DNS Lookup:"; nslookup codeload.github.com || true
+    echo "Ping Test:"; ping -c 3 codeload.github.com || true
+    echo "HTTP HEAD:"; curl -I https://codeload.github.com/google/docsy/tar.gz/712aa05897c1abe239786522131e83d69e5e1b4e || true
+    echo "Partial Download Speed Test:"; curl -s --range 0-1023 https://codeload.github.com/google/docsy/tar.gz/712aa05897c1abe239786522131e83d69e5e1b4e | wc -c
+
+  # Install dependencies with extended timeout
+  - npm config set loglevel verbose
+  - travis_wait 30 npm install --prefer-offline
+
+script:
+  - echo "npm install completed successfully"
