--- a/.travis.yml
+++ b/.travis.yml
@@ -4,46 +4,7 @@ node_js:
 os: linux
 arch: amd64
 dist: jammy        # Ubuntu 22.04
-
-# Cache npm to speed up builds
-env:
-  - NPM_CONFIG_PROGRESS=false  # disable progress bars
-cache:
-  directories:
-    - ~/.npm
-
-# Shallow clone speeds up git operations
-git:
-  depth: 1
-  quiet: true
-  submodules: false
-
-before_install:
-  # Diagnostics: run all checks in one shell block to avoid YAML parsing issues
-  - |
-    echo "--- Environment diagnostics ---"
-    echo "Platform: $(uname -a)"
-    echo "OS release: $(lsb_release -a 2>/dev/null || true)"
-    echo "Node version: $(node -v)"
-    echo "npm version: $(npm -v)"
-    echo "Git version: $(git --version)"
-    echo "DNS lookup (codeload.github.com):"; nslookup codeload.github.com || true
-    echo "Ping test (codeload.github.com, 3 packets):"; ping -c 3 codeload.github.com || true
-    echo "HTTP HEAD (Docsy tarball):"; curl -I https://codeload.github.com/google/docsy/tar.gz/712aa05897c1abe239786522131e83d69e5e1b4e || true
-
-  # Install dependencies with extended timeout
-  - npm config set loglevel verbose
-  - travis_wait 30 npm install --prefer-offline
-
-script:
-  - echo "npm install completed successfully"
-  # dalej np. npm test lub ./node_modules/.bin/hugo
-alanguage: node_js
-node_js:
-  - 20.9             # LTS version
-os: linux
-arch: amd64
-dist: jammy        # Ubuntu 22.04
+group: previous
 
 # Disable npm progress bars to reduce log noise
 env:
@@ -79,7 +40,22 @@ before_install:
     echo "HTTP HEAD:"; curl -I https://codeload.github.com/google/docsy/tar.gz/712aa05897c1abe239786522131e83d69e5e1b4e || true
     echo "Partial Download Speed Test:"; curl -s --range 0-1023 https://codeload.github.com/google/docsy/tar.gz/712aa05897c1abe239786522131e83d69e5e1b4e | wc -c
 
-  # Install dependencies with extended timeout
+    echo "--- TLS & Certificates ---"
+    echo "OpenSSL Version:"; openssl version
+    echo "TLS handshake dump:"; openssl s_client -connect codeload.github.com:443 -servername codeload.github.com < /dev/null | head -n 20
+    echo "CA Packages:"; dpkg -l | grep ca-certificates || true
+
+    echo "--- npm Fetch Dry Run (HTTP2 vs HTTP1) ---"
+    npm config set prefer-http1 true
+    npm install docsy --dry-run
+    npm config set prefer-http1 false
+
+    echo "--- Single Socket Test ---"
+    npm config set maxsockets 1
+    travis_wait 10 npm install --prefer-offline --dry-run || true
+    npm config delete maxsockets
+
+  # Finally, install real dependencies with extended timeout
   - npm config set loglevel verbose
   - travis_wait 30 npm install --prefer-offline
 
